<resources>
    <string name="app_name">Food Recipes App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_recipes">Recipes</string>
    <string name="title_favorite_recipes">Favorite</string>
    <string name="title_food_joke">Joke</string>
    <string name="title_overview">Overview</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_instructions">Instructions</string>

    <string name="hint_no_internet">No internet connection</string>
    <string name="hint_timeout">Timeout</string>
    <string name="hint_api_key_limit">API Key limited</string>
    <string name="hint_no_recipes">Recipes not found</string>
    <string name="hint_recipe_saved">Recipe saved</string>
    <string name="hint_removed_from_favorites">Removed from Favorites</string>
    <string name="hint_no_favorite_recipes">No Favorite Recipes</string>
    <string name="hint_delete_all">Delete All</string>
    <string name="hint_save_to_favorites">Save to Favorites</string>
    <string name="hint_all_recipes_removed">All recipes removed</string>

    <string name="text_vegan">Vegan</string>
    <string name="text_meal_type">Meal Type</string>
    <string name="text_diet_type">Diet Type</string>
    <string name="text_apply">Apply</string>
    <string name="text_search">Search</string>
    <string name="text_detail">Detail</string>
    <string name="text_vegetarian">Vegetarian</string>
    <string name="text_gluten_free">Gluten Free</string>
    <string name="text_dairy_free">Dairy Free</string>
    <string name="text_healthy">Healthy</string>
    <string name="text_cheap">Cheap</string>
    <string name="text_okay">Okay</string>
    <string name="text_error">Error</string>
    <string name="text_share">Share</string>

    <!--  Meal Type  -->
    <string name="chip_main_course">Main Course</string>
    <string name="chip_bread">Bread</string>
    <string name="chip_marinade">Marinade</string>
    <string name="chip_side_dish">Side Dish</string>
    <string name="chip_break_fast">Breakfast</string>
    <string name="chip_finger_food">FingerFood</string>
    <string name="chip_dessert">Dessert</string>
    <string name="chip_soup">Soup</string>
    <string name="chip_snack">Snack</string>
    <string name="chip_appetizer">Appetizer</string>
    <string name="chip_beverage">Beverage</string>
    <string name="chip_drink">Drink</string>
    <string name="chip_salad">Salad</string>
    <string name="chip_sauce">Sauce</string>

    <!--  Diet Type  -->
    <string name="chip_gluten_free">Gluten Free</string>
    <string name="chip_ketogenic">Ketogenic</string>
    <string name="chip_vegetarian">Vegetarian</string>
    <string name="chip_lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="chip_ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="chip_vegan">Vegan</string>
    <string name="chip_pescetarian">Pescetarian</string>
    <string name="chip_paleo">Paleo</string>
    <string name="chip_primal">Primal</string>
    <string name="chip_low_fodmap">Low FODMAP</string>
    <string name="chip_whole30">Whole30</string>
    <string name="hint_delete_favorite_recipe">Delete Favorite Recipe</string>

    <string name="number_item_selected">%d item selected</string>
    <string name="number_recipes_removed">%d Recipe/s removed</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>

</resources>