<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMealType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_meal_type"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/hsvMealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMealType">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupMealType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/chipMainCourse"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMainCourse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_main_course" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBread"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_bread" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMarinade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_marinade" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSideDish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_side_dish" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBreakfast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_break_fast" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipFingerFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_finger_food" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDessert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_dessert" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSoup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_soup" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSnack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_snack" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipAppetizer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_appetizer" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBeverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_beverage" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDrink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_drink" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSalad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_salad" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSauce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_sauce" />

                </com.google.android.material.chip.ChipGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDietType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_diet_type"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hsvMealType" />

        <HorizontalScrollView
            android:id="@+id/hsvDietType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDietType">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupDietType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/chipGlutenFree"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipGlutenFree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_gluten_free" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipKetogenic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_ketogenic" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipVegetarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipLactoVegetarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_lacto_vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipOvoVegetarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_ovo_vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipVegan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_vegan" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPescetarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_pescetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPaleo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_paleo" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPrimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_primal" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipLowFODMAP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_low_fodmap" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipWhole30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_whole30" />

                </com.google.android.material.chip.ChipGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="24dp"
            android:text="@string/text_apply"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hsvDietType" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>